# ComplexFraction

./: LICENSE  README.md  __init__.py  complex_fraction.py  pyproject.toml  test_complex_fraction.py
complex_fraction/: __init__.py
complex_fraction/testing/: test_complex_fraction.py
complexfraction/: __init__.py  complex_fraction.py
src/: __init__.py
testing/: test_complex_fraction.py
tests/: test_complex_fraction.py
