[tool.poetry]
name = "ComplexFraction"
version = "1.0.7"
description = "Implements class supporting complex arithmetic with real and imag being Fractions"
authors = ["Moussa Mikhail <moussamikhail56@gmail.com>"]
license = "MIT"
packages = [
	{ include = "complex_fraction.py"},
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
