[tool.poetry]
name = "complex_fraction"
version = "1.0.9"
description = "Implements a class that subclasses Complex whose real and imag attributes are Fractions."
authors = ["Moussa Mikhail <moussamikhail56@gmail.com>"]
license = "MIT"
packages = [
    { include = "complexfraction"}
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^22.1.0"
mypy = "^0.942"
flake8 = "^4.0.1"
pylint = "^2.13.4"
flake8-bugbear = "^22.3.23"
flake8-comprehensions = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
